--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -37,7 +37,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddUser</td>
+<td>verifyAA</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
