--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,14 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79cee3">  <td>21/07/01 16:33:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@4a194c39]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@264978436</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/07/01 16:33:08</td>   <td>5569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddUser()[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@189aa67a]">verifyAddUser</td> 
-  <td>main@264978436</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/07/01 16:32:57</td>   <td>-5943</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@4a194c39]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@264978436</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/07/01 16:33:13</td>   <td>10270</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@4a194c39]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@264978436</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/07/01 16:33:01</td>   <td>-1614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@4a194c39]">verifyLoginErrorMessage</td> 
-  <td>main@264978436</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
+  <td>main@500618423</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
+  <td>main@500618423</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
+  <td>main@500618423</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/07/03 08:16:17</td>   <td>-36603</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@52066604]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@500618423</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/07/03 08:16:24</td>   <td>-29317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@52066604]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@500618423</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
+  <td>main@500618423</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
+  <td>main@500618423</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
+  <td>main@500618423</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
+  <td>main@500618423</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/07/03 08:16:21</td>   <td>-32568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@52066604]">verifyLoginErrorMessage</td> 
+  <td>main@500618423</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/07/03 08:16:57</td>   <td>3879</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@52066604]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@500618423</td>   <td></td> </tr>
 </table>
