--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,26 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79cee3">  <td>21/07/03 08:16:57</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@52066604]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@500618423</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/07/03 08:16:17</td>   <td>-40482</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@52066604]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@500618423</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>-3879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
-  <td>main@500618423</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>-3879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
-  <td>main@500618423</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>-3879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
-  <td>main@500618423</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>-3879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
-  <td>main@500618423</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>-3879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
-  <td>main@500618423</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>-3879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
-  <td>main@500618423</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/07/03 08:16:54</td>   <td>-3879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAA(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5a9d6f02]">verifyAA</td> 
-  <td>main@500618423</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/07/03 08:16:21</td>   <td>-36447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@52066604]">verifyLoginErrorMessage</td> 
-  <td>main@500618423</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/07/03 08:16:24</td>   <td>-33196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@52066604]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@500618423</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/03 19:30:17</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@73a2e526]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/03 19:30:03</td>   <td>-13636</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@73a2e526]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/03 19:30:12</td>   <td>-4153</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyUserManagementPage.navigate()[pri:0, instance:com.maven.testng.VerifyUserManagementPage@7d64e326]">&gt;&gt;navigate</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/03 19:30:14</td>   <td>-2503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.test(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyUserManagementPage@7d64e326]">test</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/03 19:30:17</td>   <td>-54</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.test(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyUserManagementPage@7d64e326]">test</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/03 19:30:17</td>   <td>-28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.test(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyUserManagementPage@7d64e326]">test</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/03 19:30:17</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.test(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyUserManagementPage@7d64e326]">test</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/03 19:30:07</td>   <td>-9938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@73a2e526]">verifyLoginErrorMessage</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/03 19:30:08</td>   <td>-8469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@73a2e526]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
 </table>
