--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,40 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/10 16:37:56</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@2d96543c]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="b46fba">  <td>21/07/11 14:01:58</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@2d96543c]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/10 16:36:29</td>   <td>-86737</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@2d96543c]">&gt;&gt;getURL</td> 
+<tr bgcolor="b46fba">  <td>21/07/11 14:01:49</td>   <td>-8650</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@2d96543c]">&gt;&gt;getURL</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:36:45</td>   <td>-71163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
+<tr bgcolor="658a60">  <td>21/07/11 14:01:58</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyEmploymentStatus.navigate()[pri:0, instance:com.maven.testng.VerifyEmploymentStatus@73a2e526]">&gt;&gt;navigate</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816522350</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/11 14:01:58</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyEmploymentStatus.verifyAddEmploymentStatus()[pri:1, instance:com.maven.testng.VerifyEmploymentStatus@73a2e526]">verifyAddEmploymentStatus</td> 
   <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:36:51</td>   <td>-64796</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
+<tr bgcolor="b46fba">  <td>21/07/11 14:01:54</td>   <td>-3999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@2d96543c]">verifyLoginErrorMessage</td> 
   <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:36:55</td>   <td>-60799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:36:59</td>   <td>-56627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:03</td>   <td>-52969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:08</td>   <td>-48278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:13</td>   <td>-43122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:18</td>   <td>-38252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:23</td>   <td>-33327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:29</td>   <td>-27227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:35</td>   <td>-21419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:42</td>   <td>-14015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:47</td>   <td>-8820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:52</td>   <td>-4351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/10 16:36:36</td>   <td>-79566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@2d96543c]">verifyLoginErrorMessage</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/10 16:36:38</td>   <td>-77911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@2d96543c]">verifyLoginWithCorrectCredentials</td> 
+<tr bgcolor="b46fba">  <td>21/07/11 14:01:56</td>   <td>-2404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@2d96543c]">verifyLoginWithCorrectCredentials</td> 
   <td>main@1816522350</td>   <td></td> </tr>
 </table>
