--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,40 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/10 16:36:29</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@2d96543c]">&gt;&gt;getURL</td> 
+<tr bgcolor="b46fba">  <td>21/07/11 14:01:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@2d96543c]">&gt;&gt;getURL</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/10 16:36:36</td>   <td>7171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@2d96543c]">verifyLoginErrorMessage</td> 
+<tr bgcolor="b46fba">  <td>21/07/11 14:01:54</td>   <td>4651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@2d96543c]">verifyLoginErrorMessage</td> 
   <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/10 16:36:38</td>   <td>8826</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@2d96543c]">verifyLoginWithCorrectCredentials</td> 
+<tr bgcolor="b46fba">  <td>21/07/11 14:01:56</td>   <td>6246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@2d96543c]">verifyLoginWithCorrectCredentials</td> 
   <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:36:45</td>   <td>15574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
+<tr bgcolor="658a60">  <td>21/07/11 14:01:58</td>   <td>8628</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyEmploymentStatus.navigate()[pri:0, instance:com.maven.testng.VerifyEmploymentStatus@73a2e526]">&gt;&gt;navigate</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816522350</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/11 14:01:58</td>   <td>8645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyEmploymentStatus.verifyAddEmploymentStatus()[pri:1, instance:com.maven.testng.VerifyEmploymentStatus@73a2e526]">verifyAddEmploymentStatus</td> 
   <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:36:51</td>   <td>21941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:36:55</td>   <td>25938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:36:59</td>   <td>30110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:03</td>   <td>33768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:08</td>   <td>38459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:13</td>   <td>43615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddJobTitle(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyAddJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:18</td>   <td>48485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:23</td>   <td>53410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:29</td>   <td>59510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:35</td>   <td>65318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:42</td>   <td>72722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:47</td>   <td>77917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/10 16:37:52</td>   <td>82386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@73a2e526]">verifyEditJobTitle</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/10 16:37:56</td>   <td>86737</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@2d96543c]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="b46fba">  <td>21/07/11 14:01:58</td>   <td>8650</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@2d96543c]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816522350</td>   <td></td> </tr>
 </table>
