--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/11 14:01:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@2d96543c]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/11 14:01:54</td>   <td>4651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@2d96543c]">verifyLoginErrorMessage</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/11 14:01:56</td>   <td>6246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@2d96543c]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/11 14:01:58</td>   <td>8628</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyEmploymentStatus.navigate()[pri:0, instance:com.maven.testng.VerifyEmploymentStatus@73a2e526]">&gt;&gt;navigate</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/11 14:01:58</td>   <td>8645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyEmploymentStatus.verifyAddEmploymentStatus()[pri:1, instance:com.maven.testng.VerifyEmploymentStatus@73a2e526]">verifyAddEmploymentStatus</td> 
-  <td>main@1816522350</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/11 14:01:58</td>   <td>8650</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@2d96543c]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816522350</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/11 16:15:18</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@73a2e526]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/11 16:15:23</td>   <td>5002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@73a2e526]">verifyLoginErrorMessage</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/11 16:15:24</td>   <td>6682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@73a2e526]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/11 16:15:30</td>   <td>11730</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyEmploymentStatus.navigate()[pri:0, instance:com.maven.testng.VerifyEmploymentStatus@7d64e326]">&gt;&gt;navigate</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/11 16:15:33</td>   <td>15025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyEmploymentStatus.verifyAddEmploymentStatus(java.lang.String)[pri:1, instance:com.maven.testng.VerifyEmploymentStatus@7d64e326]">verifyAddEmploymentStatus</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/11 16:15:33</td>   <td>15028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyEmploymentStatus.verifyAddEmploymentStatus(java.lang.String)[pri:1, instance:com.maven.testng.VerifyEmploymentStatus@7d64e326]">verifyAddEmploymentStatus</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/11 16:15:33</td>   <td>15032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyEmploymentStatus.verifyAddEmploymentStatus(java.lang.String)[pri:1, instance:com.maven.testng.VerifyEmploymentStatus@7d64e326]">verifyAddEmploymentStatus</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/11 16:15:33</td>   <td>15034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyEmploymentStatus.verifyAddEmploymentStatus(java.lang.String)[pri:1, instance:com.maven.testng.VerifyEmploymentStatus@7d64e326]">verifyAddEmploymentStatus</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/11 16:15:33</td>   <td>15036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyEmploymentStatus.verifyAddEmploymentStatus(java.lang.String)[pri:1, instance:com.maven.testng.VerifyEmploymentStatus@7d64e326]">verifyAddEmploymentStatus</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/11 16:15:33</td>   <td>15039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyEmploymentStatus.verifyAddEmploymentStatus(java.lang.String)[pri:1, instance:com.maven.testng.VerifyEmploymentStatus@7d64e326]">verifyAddEmploymentStatus</td> 
+  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/11 16:15:33</td>   <td>15042</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@73a2e526]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1799230133</td>   <td></td> </tr>
 </table>
